======================================================================================================================

XX XXX XXXX
Version 5.7.0
======================================================================================================================
AllOverIt
  * Improvements to IAsyncCommand and AsyncCommandPipeline - now includes a cancellation token


12 May 2022
Version 5.6.0
======================================================================================================================
AllOverIt
  * Added NotAny() as an IEnumerable extension
  * Minor performance improvement to ObjectPropertySerializer.SerializeToDictionary() when the input is already a
    dictionary<string, string>.
  * ObjectPropertySerializer now supports serialization of a root-level collection of primitives (not a property)
    when value collation is enabled ("[]" is used as the dictionary key).
  * Added a Breadcrumbs collection that can be used to capture diagnostic/trace information. Can be configured for
    multi-thread access if required.
  * Added a BreadcrumbsFactory to conveniently create new instances on demand to emulate scoping.


09 May 2022
Version 5.5.0 / 5.5.1
======================================================================================================================
AllOverIt.Serialization
  * Added missing TryGetValues() and GetValues() on JsonHelperBase


09 May 2022
Version 5.5.0
======================================================================================================================
AllOverIt
  * Added IsNotNullOrEmpty() to string extensions

AllOverIt.Validation
  * Added ContainsModelRegistration() to IValidationRegistry
  * Added support for async validation and assertion

AllOverIt.Serialization
AllOverIt.Serialization.NewtonsoftJson
AllOverIt.Serialization.SystemTextJson
  * Added TryGetValues() and GetValues() to ElementDictionaryExtensions