@@ -1,7 +1,9 @@
-﻿using AllOverIt.Extensions;
+﻿using System;
+using AllOverIt.Extensions;
 using AllOverIt.Fixture;
 using FluentAssertions;
 using System.Reflection;
+using AllOverIt.Fixture.Extensions;
 using Xunit;
 
 namespace AllOverIt.Tests.Extensions
@@ -26,6 +28,18 @@ namespace AllOverIt.Tests.Extensions
 
         public class IsAbstract : PropertyInfoExtensionsFixture
         {
+            [Fact]
+            public void Should_Throw_When_PropertyInfo_Null()
+            {
+                Invoking(() =>
+                    {
+                        AllOverIt.Extensions.PropertyInfoExtensions.IsAbstract(null);
+                    })
+                    .Should()
+                    .Throw<ArgumentNullException>()
+                    .WithNamedMessageWhenNull("propertyInfo");
+            }
+
             [Theory]
             [InlineData("Prop1")]
             public void Should_Determine_Base_Is_Abstract(string name)
@@ -61,6 +75,18 @@ namespace AllOverIt.Tests.Extensions
 
         public class IsInternal : PropertyInfoExtensionsFixture
         {
+            [Fact]
+            public void Should_Throw_When_PropertyInfo_Null()
+            {
+                Invoking(() =>
+                    {
+                        AllOverIt.Extensions.PropertyInfoExtensions.IsInternal(null);
+                    })
+                    .Should()
+                    .Throw<ArgumentNullException>()
+                    .WithNamedMessageWhenNull("propertyInfo");
+            }
+
             [Theory]
             [InlineData("Prop2")]
             public void Should_Determine_Is_Internal(string name)
@@ -87,6 +113,18 @@ namespace AllOverIt.Tests.Extensions
 
         public class IsPrivate : PropertyInfoExtensionsFixture
         {
+            [Fact]
+            public void Should_Throw_When_PropertyInfo_Null()
+            {
+                Invoking(() =>
+                    {
+                        AllOverIt.Extensions.PropertyInfoExtensions.IsPrivate(null);
+                    })
+                    .Should()
+                    .Throw<ArgumentNullException>()
+                    .WithNamedMessageWhenNull("propertyInfo");
+            }
+
             [Theory]
             [InlineData("Prop3")]
             public void Should_Determine_Is_Private(string name)
@@ -113,6 +151,18 @@ namespace AllOverIt.Tests.Extensions
 
         public class IsProtected : PropertyInfoExtensionsFixture
         {
+            [Fact]
+            public void Should_Throw_When_PropertyInfo_Null()
+            {
+                Invoking(() =>
+                    {
+                        AllOverIt.Extensions.PropertyInfoExtensions.IsProtected(null);
+                    })
+                    .Should()
+                    .Throw<ArgumentNullException>()
+                    .WithNamedMessageWhenNull("propertyInfo");
+            }
+
             [Theory]
             [InlineData("Prop4")]
             public void Should_Determine_Is_Protected(string name)
@@ -139,6 +189,18 @@ namespace AllOverIt.Tests.Extensions
 
         public class IsPublic : PropertyInfoExtensionsFixture
         {
+            [Fact]
+            public void Should_Throw_When_PropertyInfo_Null()
+            {
+                Invoking(() =>
+                    {
+                        AllOverIt.Extensions.PropertyInfoExtensions.IsPublic(null);
+                    })
+                    .Should()
+                    .Throw<ArgumentNullException>()
+                    .WithNamedMessageWhenNull("propertyInfo");
+            }
+
             [Theory]
             [InlineData("Prop1")]
             [InlineData("Prop5")]
@@ -165,6 +227,18 @@ namespace AllOverIt.Tests.Extensions
 
         public class IsStatic : PropertyInfoExtensionsFixture
         {
+            [Fact]
+            public void Should_Throw_When_PropertyInfo_Null()
+            {
+                Invoking(() =>
+                    {
+                        AllOverIt.Extensions.PropertyInfoExtensions.IsStatic(null);
+                    })
+                    .Should()
+                    .Throw<ArgumentNullException>()
+                    .WithNamedMessageWhenNull("propertyInfo");
+            }
+
             [Theory]
             [InlineData("Prop6")]
             public void Should_Determine_Is_Static(string name)
@@ -191,6 +265,18 @@ namespace AllOverIt.Tests.Extensions
 
         public class IsVirtual : PropertyInfoExtensionsFixture
         {
+            [Fact]
+            public void Should_Throw_When_PropertyInfo_Null()
+            {
+                Invoking(() =>
+                    {
+                        AllOverIt.Extensions.PropertyInfoExtensions.IsVirtual(null);
+                    })
+                    .Should()
+                    .Throw<ArgumentNullException>()
+                    .WithNamedMessageWhenNull("propertyInfo");
+            }
+
             [Theory]
             [InlineData("Prop1")]     // it's abstract, so it's virtual
             [InlineData("Prop7")]
@@ -224,6 +310,18 @@ namespace AllOverIt.Tests.Extensions
             }
 
             [Fact]
+            public void Should_Throw_When_PropertyInfo_Null()
+            {
+                Invoking(() =>
+                    {
+                        AllOverIt.Extensions.PropertyInfoExtensions.IsIndexer(null);
+                    })
+                    .Should()
+                    .Throw<ArgumentNullException>()
+                    .WithNamedMessageWhenNull("propertyInfo");
+            }
+
+            [Fact]
             public void Should_Determine_Is_Indexer()
             {
                 var actual = GetPropertyInfo<DummyWithIndexer>("Item").IsIndexer();
@@ -237,6 +335,91 @@ namespace AllOverIt.Tests.Extensions
                 var actual = GetPropertyInfo<DummyWithIndexer>(nameof(DummyWithIndexer.That)).IsIndexer();
 
                 actual.Should().BeFalse();
+            }
+        }
+
+        public class CreateMemberAccessLambda : PropertyInfoExtensionsFixture
+        {
+            [Fact]
+            public void Should_Throw_When_PropertyInfo_Null()
+            {
+                Invoking(() =>
+                    {
+                        AllOverIt.Extensions.PropertyInfoExtensions.CreateMemberAccessLambda<DummyClass, string>(null, Create<string>());
+                    })
+                    .Should()
+                    .Throw<ArgumentNullException>()
+                    .WithNamedMessageWhenNull("propertyInfo");
+            }
+
+            [Fact]
+            public void Should_Throw_When_ParameterName_Null()
+            {
+                Invoking(() =>
+                    {
+                        var propInfo = GetPropertyInfo<DummyClass>(nameof(DummyClass.Prop5));
+
+                        AllOverIt.Extensions.PropertyInfoExtensions.CreateMemberAccessLambda<DummyClass, string>(propInfo, null);
+                    })
+                    .Should()
+                    .Throw<ArgumentNullException>()
+                    .WithNamedMessageWhenNull("parameterName");
+            }
+
+            [Fact]
+            public void Should_Throw_When_ParameterName_Empty()
+            {
+                Invoking(() =>
+                    {
+                        var propInfo = GetPropertyInfo<DummyClass>(nameof(DummyClass.Prop5));
+
+                        AllOverIt.Extensions.PropertyInfoExtensions.CreateMemberAccessLambda<DummyClass, string>(propInfo, string.Empty);
+                    })
+                    .Should()
+                    .Throw<ArgumentException>()
+                    .WithNamedMessageWhenEmpty("parameterName");
+            }
+
+            [Fact]
+            public void Should_Throw_When_ParameterName_Whitespace()
+            {
+                Invoking(() =>
+                    {
+                        var propInfo = GetPropertyInfo<DummyClass>(nameof(DummyClass.Prop5));
+
+                        AllOverIt.Extensions.PropertyInfoExtensions.CreateMemberAccessLambda<DummyClass, string>(propInfo, "  ");
+                    })
+                    .Should()
+                    .Throw<ArgumentException>()
+                    .WithNamedMessageWhenEmpty("parameterName");
+            }
+
+            [Fact]
+            public void Should_Create_Expression()
+            {
+                var propInfo = GetPropertyInfo<DummyClass>(nameof(DummyClass.Prop5));
+
+                var lambda = AllOverIt.Extensions.PropertyInfoExtensions.CreateMemberAccessLambda<DummyClass, string>(propInfo, "item");
+
+                var actual = lambda.ToString();
+
+                actual.Should().Be("item => item.Prop5");
+            }
+
+            [Fact]
+            public void Should_Evaluate_Expression()
+            {
+                var propInfo = GetPropertyInfo<DummyClass>(nameof(DummyClass.Prop5));
+
+                var lambda = AllOverIt.Extensions.PropertyInfoExtensions.CreateMemberAccessLambda<DummyClass, string>(propInfo, "item");
+
+                var dummy = Create<DummyClass>();
+                var expected = dummy.Prop5;
+
+                var compiled = lambda.Compile();
+                var actual = compiled.Invoke(dummy);
+
+                actual.Should().Be(expected);
             }
         }
 
